--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://kit.fontawesome.com/f6ed09b881.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/style.css">
     
   </head>
   
