--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://kit.fontawesome.com/f6ed09b881.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/style.css">
     
   </head>
   
@@ -9,7 +9,7 @@
     <section  class="header">
       <div class="inner_header">
         <div class="logo_container">
-          <a href="https://cdpn.io/ranjani-pinnelli/debug/KKdMjzp/NQAzYBWqJQDr">
+          <a href="index.html">
             <img src="http://rksevasamithihnr.org/img/logo-web.png" alt="logo">
           </a>
         </div>
@@ -23,7 +23,7 @@
     <nav class="navbar">
       <div class="inner_navbar">
         <ul>
-          <li><a href="#" class="menu-item">Home</a></li>
+          <li><a href="index.html" class="menu-item">Home</a></li>
           <li><a href="#" class="menu-item">About Us</a>
               <div class="dropdown-content">
                 <a href="#" class="dropdown-item">Our inspiration</a>
@@ -46,7 +46,7 @@
               <a href="#" class="dropdown-item">Videos</a>
             </div>
           </li>
-          <li><a href="https://cdpn.io/ranjani-pinnelli/debug/vYNyWdr/DqrDdgzVNLKr" class="menu-item">Donate</a></li>
+          <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
           <li><a href="#" class="menu-item">Get Involved</a></li>
           <li><a href="#" class="menu-item">Our Sponsors</a></li>
           <li><a href="#" class="menu-item">Contact Us</a></li>
