--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     <h2>Featured Announcements</h2>
   
     <div id="a-container" class="a-container">
-      <a href="https://cdpn.io/ranjani-pinnelli/debug/vYNyWdr/DqrDdgzVNLKr#donate-table" class="a-tile" >
+      <a href="donationappeal.html#donate-table" class="a-tile" >
         <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/computer%20center.jpg?raw=true" alt="announcement1">
         <p>You can make a difference, donate and help us build a computer center.</p>
       </a>
     
-      <a href="https://cdpn.io/ranjani-pinnelli/debug/vYNyWdr/DqrDdgzVNLKr#donate-table" class="a-tile" >
+      <a href="donationappeal.html#donate-table" class="a-tile" >
         <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/personality%20development%20classes.jpg?raw=true" alt="announcement2">
         <p> Help us run these personality development classes </p>
       </a>
