--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <script src="https://kit.fontawesome.com/f6ed09b881.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/style.css">
-    
+    <title>Ramakrishna Seva Samithi</title>
   </head>
   
   <body>
@@ -31,7 +31,7 @@
                 <a href="#" class="dropdown-item">Our volunteers</a>
               </div>
             </li>
-          <li><a href="#" class="menu-item">Campus</a></li>
+          <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
           <li><a href="#" class="menu-item">Activites</a>
             <div class="dropdown-content">
               <a href="#" class="dropdown-item">Medical</a>
@@ -77,7 +77,7 @@
   <section id="updates" class="updates">
     <h2>Recent updates</h2>
     <div id="updates-container" class="updates-container">
-      <a href="https://cdpn.io/ranjani-pinnelli/debug/dyYRLQV/XBAGRqxpQvGr" class="updates-tile" >
+      <a href="infrastructure.html" class="updates-tile" >
         <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/New%20Building.jpg?raw=true" alt="update1">
         <p>Construction of the Vivekananda Institute of Human Excellence in full swing</p>
       </a>
