--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
   
     <div id="a-container" class="a-container">
       <a href="donationappeal.html#donate-table" class="a-tile" >
-        <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/computer%20center.jpg?raw=true" alt="announcement1">
+        <img src="computer center.jpg" alt="announcement1">
         <p>You can make a difference, donate and help us build a computer center.</p>
       </a>
     
       <a href="donationappeal.html#donate-table" class="a-tile" >
-        <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/personality%20development%20classes.jpg?raw=true" alt="announcement2">
+        <img src="personality development classes.jpg" alt="announcement2">
         <p> Help us run these personality development classes </p>
       </a>
     </div>
