--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <img src="home page image.jpg" alt="samithi-picture">
   </div>
     
-  <section id="announcements" class="announcements">
+  <section id="announcements" class="new-section">
     <h2>Featured Announcements</h2>
   
     <div id="a-container" class="a-container">
