--- a/donationappeal.html
+++ b/donationappeal.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <script src="https://kit.fontawesome.com/f6ed09b881.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/style.css">
-    
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Ramakrishna Seva Samithi</title>
   </head>
   
   <body>
@@ -24,15 +24,15 @@
       <div class="inner_navbar">
         <ul>
           <li><a href="index.html" class="menu-item">Home</a></li>
-          <li><a href="#" class="menu-item">About Us</a>
+          <li><a href="about.html" class="menu-item">About Us</a>
               <div class="dropdown-content">
                 <a href="#" class="dropdown-item">Our inspiration</a>
                 <a href="#" class="dropdown-item">History of the Seva Samithi</a>
                 <a href="#" class="dropdown-item">Our volunteers</a>
               </div>
             </li>
-          <li><a href="#" class="menu-item">Campus</a></li>
-          <li><a href="#" class="menu-item">Activites</a>
+          <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
+          <li><a href="activities.html" class="menu-item">Activites</a>
             <div class="dropdown-content">
               <a href="#" class="dropdown-item">Medical</a>
               <a href="#" class="dropdown-item">Educational</a>
@@ -47,39 +47,39 @@
             </div>
           </li>
           <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
-          <li><a href="#" class="menu-item">Get Involved</a></li>
-          <li><a href="#" class="menu-item">Our Sponsors</a></li>
-          <li><a href="#" class="menu-item">Contact Us</a></li>
+          <li><a href="volunteer.html" class="menu-item">Get Involved</a></li>
+          <li><a href="sponsor.html" class="menu-item">Our Sponsors</a></li>
+          <li><a href="contact.html" class="menu-item">Contact Us</a></li>
         </ul>
       </div>
     </nav>
     
-    <section class="appeal">
-        <h2> AN APPEAL TO DEVOTEES AND WELL WISHERS </h2>
-        <div id="appeal-content">
-            <p>Dear friends, Namaste. Sri Ramakrishna Seva Samithi has been rendering service for over 15 years to the society in the field of Health, Education, Cultural Activities, Relief and rehabilitation work and other social and spiritual programmes.</p>
-            <p>The Samithi is solely dependent on contribution from well-wishers like you to carry out all its activities efficiently and uninterruptedly.</p>
-            <p>In order to execute the orders at hand, we appeal to you for contribution. Needless to mention, your help to the Samithi is your direct contribution to humanity.</p>
-            <p>Your contribution will go a long way in ensuring timely completion of all projects which cater to the poor and need who are the beneficiaries. We also request you to share this with your friends and relatives who are keen to join in social and spiritual cause.</p>
-            <p>You may send your contribution by cash or cheque in favour of ‘Sri Ramakrishna Seva Samithi’. Kindly provide your contact details and email id.</p>
-        </div>
-        <table id="donate-table">
-            <tr>
-                <th>Activities in brief</th>
-                <th>Expenses</th>
-                <th>Your support needed</th>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
+    <section id="appeal" class="page-content">
+      <h2> AN APPEAL TO DEVOTEES AND WELL WISHERS </h2>
+      <div class="page-text">
+        <p>Dear friends, Namaste. Sri Ramakrishna Seva Samithi has been rendering service for over 15 years to the society in the field of Health, Education, Cultural Activities, Relief and rehabilitation work and other social and spiritual programmes.</p>
+        <p>The Samithi is solely dependent on contribution from well-wishers like you to carry out all its activities efficiently and uninterruptedly.</p>
+        <p>In order to execute the orders at hand, we appeal to you for contribution. Needless to mention, your help to the Samithi is your direct contribution to humanity.</p>
+        <p>Your contribution will go a long way in ensuring timely completion of all projects which cater to the poor and need who are the beneficiaries. We also request you to share this with your friends and relatives who are keen to join in social and spiritual cause.</p>
+        <p>You may send your contribution by cash or cheque in favour of ‘Sri Ramakrishna Seva Samithi’. Kindly provide your contact details and email id.</p>
+      </div>
+      <table id="donate-table">
+        <tr>
+          <th>Activities in brief</th>
+          <th>Expenses</th>
+          <th>Your support needed</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
     </section>
   </body>
 </html>
