--- a/donationappeal.html
+++ b/donationappeal.html
@@ -81,5 +81,13 @@
         </tr>
       </table>
     </section>
+
+    <section  class="footer" id="footer">
+      <div class="copyright">
+        <i class="far fa-copyright"></i>
+        <p>2020 Sri Ramakrishna Seva Samithi, Husurnagar</p>
+      </div>
+        <p>Designed by<a href="#" target="_blank"> Ranjani Pinnelli</a></p>
+    </section>
   </body>
 </html>
