--- a/about.html
+++ b/about.html
@@ -24,15 +24,15 @@
       <div class="inner_navbar">
         <ul>
           <li><a href="index.html" class="menu-item">Home</a></li>
-          <li><a href="htmls/about.html" class="menu-item">About Us</a>
+          <li><a href="about.html" class="menu-item">About Us</a>
               <div class="dropdown-content">
                 <a href="#" class="dropdown-item">Our inspiration</a>
                 <a href="#" class="dropdown-item">History of the Seva Samithi</a>
                 <a href="#" class="dropdown-item">Our volunteers</a>
               </div>
             </li>
-          <li><a href="htmls/infrastructure.html" class="menu-item">Campus</a></li>
-          <li><a href="htmls/activities.html" class="menu-item">Activites</a>
+          <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
+          <li><a href="activities.html" class="menu-item">Activites</a>
             <div class="dropdown-content">
               <a href="#" class="dropdown-item">Medical</a>
               <a href="#" class="dropdown-item">Educational</a>
@@ -46,17 +46,31 @@
               <a href="#" class="dropdown-item">Videos</a>
             </div>
           </li>
-          <li><a href="htmls/donationappeal.html" class="menu-item">Donate</a></li>
-          <li><a href="htmls/volunteer.html" class="menu-item">Get Involved</a></li>
-          <li><a href="htmls/sponsor.html" class="menu-item">Our Sponsors</a></li>
-          <li><a href="htmls/contact.html" class="menu-item">Contact Us</a></li>
+          <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
+          <li><a href="volunteer.html" class="menu-item">Get Involved</a></li>
+          <li><a href="sponsor.html" class="menu-item">Our Sponsors</a></li>
+          <li><a href="contact.html" class="menu-item">Contact Us</a></li>
         </ul>
       </div>
     </nav>
-
-    <section class="about">
-      <p>
-        About the Samithi
-        our inspiration, history and volunteers
-      </p>
+    
+    <section id="about" class="page-content">
+      <h2> About us </h2>
+      <div class="page-text">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+      </div>
     </section>
+
+    <section  class="footer" id="footer">
+      <div class="copyright">
+        <i class="far fa-copyright"></i>
+        <p>2020 Sri Ramakrishna Seva Samithi, Husurnagar</p>
+      </div>
+        <p>Designed by<a href="#" target="_blank"> Ranjani Pinnelli</a></p>
+    </section>
+  </body>
+</html>
