--- a/coronarelief.html
+++ b/coronarelief.html
@@ -54,8 +54,8 @@
       </div>
     </nav>
     
-    <section id="activities-content" class="page-content">
-      <h2> ACTIVITIES </h2>
+    <section id="coronarelief" class="page-content">
+      <h2> Helping the poor affected during the corona pandemic </h2>
       <div class="page-text">
         <p>1</p>
         <p>2</p>
