--- a/sponsor.html
+++ b/sponsor.html
@@ -54,8 +54,8 @@
       </div>
     </nav>
     
-    <section id="activities-content" class="page-content">
-      <h2> ACTIVITIES </h2>
+    <section id="sponsors" class="page-content">
+      <h2> Our Sponsors </h2>
       <div class="page-text">
         <p>1</p>
         <p>2</p>
