--- a/volunteer.html
+++ b/volunteer.html
@@ -54,8 +54,8 @@
       </div>
     </nav>
     
-    <section id="activities-content" class="page-content">
-      <h2> ACTIVITIES </h2>
+    <section id="volunteer" class="page-content">
+      <h2> AN APPEAL TO DEVOTEES AND WELL WISHERS </h2>
       <div class="page-text">
         <p>1</p>
         <p>2</p>
