--- a/infrastructure.html
+++ b/infrastructure.html
@@ -5,7 +5,7 @@
     <title>Ramakrishna Seva Samithi</title>
   </head>
   
-  <body>
+  <body><body>
     <section  class="header">
       <div class="inner_header">
         <div class="logo_container">
@@ -30,7 +30,7 @@
                 <a href="#" class="dropdown-item">History of the Seva Samithi</a>
                 <a href="#" class="dropdown-item">Our volunteers</a>
               </div>
-            </li>
+          </li>
           <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
           <li><a href="activities.html" class="menu-item">Activites</a>
             <div class="dropdown-content">
@@ -56,13 +56,43 @@
     
     <section id="infrastructure" class="page-content">
       <h2> VIVEKANANDA INSTITUTE OF HUMAN EXCELLENCE </h2>
-      <div class="page-text">
-        <p>1</p>
-        <p>2</p>
-        <p>3</p>
-        <p>4</p>
-        <p>5</p>
-      </div>
+      <p>The chief aim of the center is to instill faith in oneself and impart nobler values of life and life-giving strength, to raise individuals to higher levels of strength and felicity with spiritual, moral, ethical and eternal values of personality development and human excellence. Various programmes are intended for the aspirants coming from different cross sections of society, like the youth, students, teachers, employees of Government departments, public sector undertakings.</p>
+      <p>Today ‘we require that education’, in swami Vivekananda’s own words, ‘by which character is formed, strength of mind is increased and by which one can stand on one’s own feet.’</p>
+      <p>A new trust and inspiration has to be given to the youth in various educational institutions, irrespective of the background. The youth have to be trained to discover their own hidden potential and help them convert it to “Excellent Performance ”. For this, each youngster has to develop a healthy self-image of oneself. As the great writer Emerson says, “What lies before you and what lies behind you are tiny matters compared to what lies within you and you are the only one who can use your own ability. It is an awesome responsibility.” The potential of an average person is like a huge ocean un-sailed, a new continent unexplored, a world of possibilities waiting to be released and channeled towards some great good.</p>
+      <p>Such training is being provided at the vivekananda personality development center. Youngsters from in and around Huzurnagar participate in the inspiring and motivating sessions on:</p>
+      <ul>
+        <li>Yoga</li>
+        <li>Meditation</li>
+        <li>Dance and Music classes</li>
+        <li>Self confidence and Self discipline</li>
+        <li>Career and Character Development</li>
+        <li>Emotional stability</li>
+        <li>Leadership qualities</li>
+        <li>Indian cultural values</li>
+        <li>Spirit of service</li>
+        <li>Devotional singing</li>
+        <li>The lives of great leaders</li>
+        <li>Personlaity development</li>
+        <li>Communication</li>
+      </ul>
+      <p>Also Free tuition is conducted for the poor children in Our Vivekananda Bala vikas.</p>
+      <p>All the youth studying in Senior Secondary Schools and colleges are welcome to be the members of this dynamic youth group and get inspired and help others get inspired.</p>
+      <p>Future plans for the center:
+      <ul>
+        <li>Establish a computer center</li>
+      </ul>
+      </p>
+      <p>To incorporate all the activities mentioned above and to successfully sustain them, we are expanding our present campus. These are pictures of the new campus construction happening in full swing.</p>
+      <section id="construction-pictures" class="new-section">
+        <div class="quote-tile">
+          <img src="construction-pictures/image 10.jpeg">
+          <img src="construction-pictures/image 11.jpeg">
+          <img src="construction-pictures/image 7.jpeg">
+          <img src="construction-pictures/image 8.jpeg">
+        </div>
+        <a href = "https://photos.app.goo.gl/8nPZVKH5u1Ms5gS39" class="view_quotes" > View All Photos </a>
+      </section>
+      <p>If you wish to donate to our cause kindly contact the Samithi office. Please find the details in our <a href="donationappeal.html" class="yellow-text">Donations</a> page.</p>
     </section>
 
     <section  class="footer" id="footer">
@@ -70,7 +100,7 @@
         <i class="far fa-copyright"></i>
         <p>2020 Sri Ramakrishna Seva Samithi, Husurnagar</p>
       </div>
-        <p>Designed by<a href="#" target="_blank"> Ranjani Pinnelli</a></p>
+      <p>Designed by<a href="#" target="_blank"> Ranjani Pinnelli</a></p>
     </section>
   </body>
 </html>
