--- a/infrastructure.html
+++ b/infrastructure.html
@@ -75,7 +75,7 @@
         <li>Personlaity development</li>
         <li>Communication</li>
       </ul>
-      <p>Also Free tuition is conducted for the poor children in Our Vivekananda Bala vikas.</p>
+      <p>Also Free tuition classes are conducted for the poor children in Our Vivekananda Bala vikas.</p>
       <p>All the youth studying in Senior Secondary Schools and colleges are welcome to be the members of this dynamic youth group and get inspired and help others get inspired.</p>
       <p>Future plans for the center:
       <ul>
@@ -90,7 +90,7 @@
           <img src="construction-pictures/image 7.jpeg">
           <img src="construction-pictures/image 8.jpeg">
         </div>
-        <a href = "https://photos.app.goo.gl/8nPZVKH5u1Ms5gS39" class="view_quotes" > View All Photos </a>
+        <a href = "https://photos.app.goo.gl/8nPZVKH5u1Ms5gS39" target="_blank" class="view_quotes" > View All Photos </a>
       </section>
       <p>If you wish to donate to our cause kindly contact the Samithi office. Please find the details in our <a href="donationappeal.html" class="yellow-text">Donations</a> page.</p>
     </section>
