--- a/activities.html
+++ b/activities.html
@@ -89,12 +89,12 @@
         <p>The Samithi undertakes instant relief operations during natural calamities like fire, cyclone, tsunami, earthquake, floods, etc and man-made disasters. Primary relief operations are undertaken immediately by providing food, clothing, utensils, etc.</p><p>During the corona pandemic, we surveyed the affected regions in and around Huzurnagar. Relief activity was carried out in ward number 1 of Huzurnagar. Groceries worth Rs.25000 were distributed to 50 families. </p><p>Being a non-government organization dedicated to the service of God in man, the Math is entirely dependent on the financial help extended to it by the generous public. All donations are thankfully accepted and acknowledged.</p>
         <section id="relief-pictures" class="new-section">
         <div class="quote-tile">
-          <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/construction-pictures/image%2010.jpeg?raw=true">
-          <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/construction-pictures/image%2011.jpeg?raw=true">
-          <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/construction-pictures/image%2011.jpeg?raw=true">
-          <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/construction-pictures/image%2011.jpeg?raw=true">
+          <img src="coronareliefpictures/corona_relief_12.jpg">
+          <img src="coronareliefpictures/corona_relief_14.jpg">
+          <img src="coronareliefpictures/corona_relief_15.jpg">
+          <img src="coronareliefpictures/corona_relief_16.jpg">
         </div>
-        <a href = "https://photos.app.goo.gl/8nPZVKH5u1Ms5gS39" class="view_quotes" > View All Photos </a>
+        <a href = "https://photos.app.goo.gl/AMFRMgRrcfc8jLFp6" target="_blank"class="view_quotes" > View All Photos </a>
       </section>
       </section>
       
