--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p>Construction of the Vivekananda Institute of Human Excellence in full swing</p>
       </a>
     
-      <a href="coronarelief.html" class="tile" >
+      <a href="activities.html#relief" class="tile" >
         <img src="corona victims.jpg" alt="update2">
         <p>Relief measures for poor during the corona lockdown</p>
       </a>
