--- a/activities.html
+++ b/activities.html
@@ -100,13 +100,13 @@
       
       <section id="rural">
         <h3>Rural Development Activities</h3>
-        <p>rural activities content</p>
+        <section id="waterplant">
+          <h4>Drinking water service</h4>
+          <p>An RO plant is established at the samithi that provides drinking water service to the poor. The plant was set up at a cost of Rs. 2 Lakhs, donated to us by the Ramakrishna Mutt of Hyderabad. Water from this plant is made available at the cost of Rs.5 per liter.</p>
+        </section>
         <section id="rural-pictures" class="new-section">
         <div class="quote-tile">
-          <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/construction-pictures/image%2010.jpeg?raw=true">
-          <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/construction-pictures/image%2011.jpeg?raw=true">
-          <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/construction-pictures/image%2011.jpeg?raw=true">
-          <img src="https://github.com/RanjaniRamanathan/rksevasamithi/blob/master/construction-pictures/image%2011.jpeg?raw=true">
+          <img src="drinking water service.jpg">
         </div>
         <a href = "https://photos.app.goo.gl/8nPZVKH5u1Ms5gS39" class="view_quotes" > View All Photos </a>
       </section>
