--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <p>Relief measures for poor during the corona lockdown</p>
       </a>
       
-      <a href="drinkingwater.html" class="tile" >
+      <a href="activities.html#rural" class="tile" >
         <img src="drinking water service.jpg" alt="update3">
         <p>Drinking water service</p>
       </a>
