--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
           <li><a href="activities.html" class="menu-item">Activites</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Medical</a>
-              <a href="#" class="dropdown-item">Educational</a>
-              <a href="#" class="dropdown-item">Relief works</a>
-              <a href="#" class="dropdown-item">Rural Development</a>
+              <a href="activities.html#medical" class="dropdown-item">Medical</a>
+              <a href="activities.html#educational" class="dropdown-item">Educational</a>
+              <a href="activities.html#relief" class="dropdown-item">Relief works</a>
+              <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
             </div>
           </li>
           <li><a href="#" class="menu-item">Media</a>
@@ -97,17 +97,17 @@
   <section id="activities" class="new-section">
     <h2>Activities</h2>
     <div id="act-container" class="act-container">
-      <a href="#" target="_blank" class="tile" >
+      <a href="activities.html#medical" class="tile" >
         <img src="blood donation camp.jpg" alt="activity1">
         <p>Blood donation camps</p>
       </a>
     
-      <a href="#" target="_blank" class="tile" >
+      <a href="activities.html#medical" target="_blank" class="tile" >
         <img src="ent and general medical camp.jpg" alt="activity2">
         <p>ENT and General Medical Camps</p>
       </a>
     
-      <a href="#" target="_blank" class="tile" >
+      <a href="activities.html#medical" target="_blank" class="tile" >
         <img src="eye camp.jpg" alt="activity3">
         <p>Eye Camps</p>
       </a>
@@ -218,7 +218,7 @@
     <i class="far fa-copyright"></i>
     <p>2020 Sri Ramakrishna Seva Samithi, Husurnagar</p>
   </div>
-    <p>Designed by<a href="#" target="_blank"> Ranjani Pinnelli</a></p>
+    <p>Designed by<a href="https://codepen.io/ranjani-pinnelli" target="_blank"> Ranjani Pinnelli</a></p>
 </section>
 </body>
 </html>
