--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </li>
           <li><a href="#" class="menu-item">Media</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Photos</a>
+              <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
               <a href="#" class="dropdown-item">Videos</a>
             </div>
           </li>
@@ -62,12 +62,12 @@
     <h2>Featured Announcements</h2>
   
     <div id="a-container" class="a-container">
-      <a href="donationappeal.html#donate-table" class="tile" >
+      <a href="donationappeal.html" class="tile" >
         <img src="computer center.jpg" alt="announcement1">
         <p>You can make a difference, donate and help us build a computer center.</p>
       </a>
     
-      <a href="donationappeal.html#donate-table" class="tile" >
+      <a href="donationappeal.html" class="tile" >
         <img src="personality development classes.jpg" alt="announcement2">
         <p> Help us run these personality development classes </p>
       </a>
@@ -172,7 +172,7 @@
 <section id="gallery" class="new-section">
   <h2>Media gallery</h2>
   <div class="inner_gallery">
-    <a href="#" target="_blank" class="gallery-tile" style="background-color:#f8ac59">
+    <a href="activities-photos-link.html" target="_blank" class="gallery-tile" style="background-color:#f8ac59">
       <i class="far fa-8x fa-image"></i>
       <p> Photos </p>
     </a>
