--- a/about.html
+++ b/about.html
@@ -55,13 +55,28 @@
     </nav>
     
     <section id="about" class="page-content">
-      <h2> About us </h2>
       <div class="page-text">
-        <p>1</p>
-        <p>2</p>
-        <p>3</p>
-        <p>4</p>
-        <p>5</p>
+      <h2> Our Inspiration</h2>
+      <h3>Sri Ramakrishna</h3>
+        <div id="ramakrishna" class="about-content">
+          <img src="aboutuspictures/Sri_Ramakrishna.jpg" alt="ramakrishna">
+          <p></p>
+        </div>
+      <h3>Sri Sarada Devi</h3>
+        <div id="sarada" class="about-content">
+          <img src="aboutuspictures/Sri-Sarada-Devi.jpg" alt="Sri sarada devi">
+          <p></p>
+        </div>
+      <h3>Swami Vivekananda</h3>
+        <div id="Vivekananda" class="about-content">
+          <img src="aboutuspictures/Swami_Vivekananda_Jaipur1.jpg" alt="swami vivekananda">
+          <p></p>
+        </div>
+      <h3>Swami Ramakrishnanada</h3>
+        <div id="ramakrishnananda" class="about-content">
+          <img src="aboutuspictures/SasiMj141.jpg" alt="swami ramakrishnananda">
+          <p></p>
+        </div>
       </div>
     </section>
 
