--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <p> Photos </p>
     </a>
     
-    <a href="#" target="_blank" class="gallery-tile" >
+    <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" target="_blank" class="gallery-tile" >
       <i class="fas fa-8x fa-play"></i>
       <p>Videos</p>
     </a>
@@ -190,7 +190,7 @@
     <img src="quote 1.jpg">
     <img src="quote2.jpg">
   </div>
-  <a href = "#" class="view_quotes" > View All Quotes </a>
+  <a href = "https://photos.app.goo.gl/7b5WoYatjnGgsT487" target="_blank" class="view_quotes" > View All Quotes </a>
 </section>
     
 <section  class="new-section" id="contact">
@@ -202,7 +202,7 @@
           <a href="https://www.facebook.com/rksshnr" target="_blank">
             <img src="f_logo_RGB-Blue_58.png" class="social-icon">
           </a>
-          <a href = "#"  target="_blank">
+          <a href = "https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber"  target="_blank">
             <img src="yt_icon_rgb.png" class="social-icon">
           </a>
         </div>
