--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
               <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
             </div>
           </li>
-          <li><a href="#" class="menu-item">Media</a>
+          <li><a href="#gallery" class="menu-item">Media</a>
             <div class="dropdown-content">
               <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
-              <a href="#" class="dropdown-item">Videos</a>
+              <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item">Videos</a>
             </div>
           </li>
           <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
