--- a/contact.html
+++ b/contact.html
@@ -53,15 +53,24 @@
         </ul>
       </div>
     </nav>
-    
-    <section id="contactus" class="page-content">
-      <h2> Contact Us</h2>
-      <div class="page-text">
-        <p>1</p>
-        <p>2</p>
-        <p>3</p>
-        <p>4</p>
-        <p>5</p>
+
+    <section  class="new-section" id="contact">
+      <h2>Visit Us</h2>
+      <div class="location">
+        <div class="contact_text">
+            <p> Sri Rama Krishna Seva Samithi,<br> Huzur Nagar,<br>Telangana 508204,<br>India<br>Ph:9447080907</p>
+            <div class="social-media">
+              <a href="https://www.facebook.com/rksshnr" target="_blank">
+                <img src="f_logo_RGB-Blue_58.png" class="social-icon">
+              </a>
+              <a href = "https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber"  target="_blank">
+                <img src="yt_icon_rgb.png" class="social-icon">
+              </a>
+            </div>
+        </div>
+        <div id="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3817.5572892291375!2d79.86851331437619!3d16.897780721189324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a351bab3c34a34d%3A0xefd015bbeacf60f6!2sSri%20Rama%20Krishna%20Seva%20Samithi!5e0!3m2!1sen!2sie!4v1587751700959!5m2!1sen!2sie" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
       </div>
     </section>
 
