--- a/contact.html
+++ b/contact.html
@@ -26,24 +26,24 @@
           <li><a href="index.html" class="menu-item">Home</a></li>
           <li><a href="about.html" class="menu-item">About Us</a>
               <div class="dropdown-content">
-                <a href="#" class="dropdown-item">Our inspiration</a>
-                <a href="#" class="dropdown-item">History of the Seva Samithi</a>
-                <a href="#" class="dropdown-item">Our volunteers</a>
+                <a href="about.html#inspiration" class="dropdown-item">Our inspiration</a>
+                <a href="about.html#history" class="dropdown-item">History of the Seva Samithi</a>
+                <a href="about.html#volunteers" class="dropdown-item">Our volunteers</a>
               </div>
             </li>
           <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
           <li><a href="activities.html" class="menu-item">Activites</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Medical</a>
-              <a href="#" class="dropdown-item">Educational</a>
-              <a href="#" class="dropdown-item">Relief works</a>
-              <a href="#" class="dropdown-item">Rural Development</a>
+              <a href="activities.html#medical" class="dropdown-item">Medical</a>
+              <a href="activities.html#educational" class="dropdown-item">Educational</a>
+              <a href="activities.html#relief" class="dropdown-item">Relief works</a>
+              <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
             </div>
           </li>
           <li><a href="#" class="menu-item">Media</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Photos</a>
-              <a href="#" class="dropdown-item">Videos</a>
+              <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
+              <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item">Videos</a>
             </div>
           </li>
           <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
@@ -54,7 +54,7 @@
       </div>
     </nav>
 
-    <section  class="new-section" id="contact">
+    <section  class="page-content" id="contact">
       <h2>Visit Us</h2>
       <div class="location">
         <div class="contact_text">
