--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
       </div>
     </nav>
 
-    <section  class="page-content" id="contact">
+    <section  class="page-content" id="contactus">
       <h2>Visit Us</h2>
       <div class="location">
         <div class="contact_text">
