--- a/volunteer.html
+++ b/volunteer.html
@@ -55,13 +55,17 @@
     </nav>
     
     <section id="volunteer" class="page-content">
-      <h2> AN APPEAL TO DEVOTEES AND WELL WISHERS </h2>
+      <h2> Volunteer </h2>
       <div class="page-text">
-        <p>1</p>
-        <p>2</p>
-        <p>3</p>
-        <p>4</p>
-        <p>5</p>
+        <p>The joy in serving others without any selfish motive is infinitely greater than catering to only one’s own desires and needs because the latter can be and is done even by animals. It is a joy to be tasted personally. We invite every one to cultivate this habit of Service.</p>
+        <p>The Samithi offers ample opportunity for people with an earnest desire for serving the poor and the needy. Such selfless service helps to attain great heights in both material and spiritual life. Voluntary service can be rendered in any of the multi-functional areas of one’s expertise. It could be work from home, within the Samithi precincts, or even outside the Samithi premises.</p>
+        <p>We require volunteers in the following departments:</p>
+        <ol>
+          <li>Teaching students at the samithi</li>
+          <li>Volunteeing at Medical camps</li>
+          <li></li>
+        </ol>
+        <p>You can contact our Office to offer your time and service.</p>
       </div>
     </section>
 
