--- a/activities.html
+++ b/activities.html
@@ -61,6 +61,16 @@
         <p>The Samithi renders service to the poor and helpless patients in and around the locality. The devoted and self-sacrificing services of other eminent doctors as well as lay devotees have enabled these activities to be carried out.</p>
           <h4>Blood donation camps</h4>
           <p>Blood donation camps have been organized by the Samithi, in association with the Nalgonda Blood Bank, since 2006 on the birth anniversary of Swami Vivekananda. The Samithi has beed awarded the Best blood donation camp organizer award for 2011 by the Government of India.</p>
+          <p>A camp was conducted in the month of May, 2020. Some of the pictures below:</p>
+          <section id="medical-pictures" class="new-section">
+            <div class="quote-tile">
+              <img src="blood donation may 2020/blood donation may 2020.jpg">
+              <img src="blood donation may 2020/image 1.jpg">
+              <img src="blood donation may 2020/image 3.jpg">
+              <img src="blood donation may 2020/image 5.jpg">
+            </div>
+          <a href = "https://photos.app.goo.gl/Wr1c9mLQ794Kjhoo8" class="view_quotes" > View All Photos </a>
+          </section>
           <h4>ENT and General Medical Camps</h4>
           <p>Six ENT and General medical camps have been conducted so far catering to the people in and around Huzurnagar.
           <h4>Eye Camps</h4>
