--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
   <section id="updates" class="new-section">
     <h2>Recent updates</h2>
     <div id="updates-container" class="updates-container">
-      <a href="infrastructure.html" class="tile" >
-        <img src="New Building.jpg" alt="update1">
-        <p>Construction of the Vivekananda Institute of Human Excellence in full swing</p>
+      <a href="activities.html" class="tile" >
+        <img src="blood donation may 2020.jpg" alt="blood donation 2020">
+        <p>Blood donation camp, May 2020.</p>
       </a>
-    
+
       <a href="activities.html#relief" class="tile" >
         <img src="corona victims.jpg" alt="update2">
         <p>Relief measures for poor during the corona lockdown</p>
       </a>
-      
-      <a href="activities.html#rural" class="tile" >
-        <img src="drinking water service.jpg" alt="update3">
-        <p>Drinking water service</p>
+
+      <a href="infrastructure.html" class="tile" >
+        <img src="New Building.jpg" alt="update1">
+        <p>Construction of the Vivekananda Institute of Human Excellence in full swing</p>
       </a>
     </div>
   </section>
