--- a/activities.html
+++ b/activities.html
@@ -69,7 +69,7 @@
               <img src="blood donation may 2020/image 3.jpg">
               <img src="blood donation may 2020/image 5.jpg">
             </div>
-          <a href = "https://photos.app.goo.gl/Wr1c9mLQ794Kjhoo8" class="view_quotes" > View All Photos </a>
+          <a href = "https://photos.app.goo.gl/Wr1c9mLQ794Kjhoo8" target = "_blank" class="view_quotes" > View All Photos </a>
           </section>
           <h4>ENT and General Medical Camps</h4>
           <p>Six ENT and General medical camps have been conducted so far catering to the people in and around Huzurnagar.
@@ -87,7 +87,7 @@
             <img src="medical-activities-pictures/image8.jpg">
             <img src="medical-activities-pictures/image16.jpg">
           </div>
-        <a href = "activities-photos-link.html" class="view_quotes" > View All Photos </a>
+        <a href = "activities-photos-link.html" target = "_blank" class="view_quotes" > View All Photos </a>
         </section>
       </section>
       
@@ -116,7 +116,7 @@
           <img src="educational-activities-pictures/image2.JPG">
           <img src="educational-activities-pictures/image3.JPG">
         </div>
-        <a href = "activities-photos-link.html" class="view_quotes" > View All Photos </a>
+        <a href = "activities-photos-link.html" target = "_blank" class="view_quotes" > View All Photos </a>
       </section>
       </section>
       
