--- a/activities-photos-link.html
+++ b/activities-photos-link.html
@@ -55,6 +55,7 @@
     </nav>
 <section id="activites-photo-link" class="page-content">
    <p>Please find below photos of our various Medical Activities</p>
+   <a href="https://photos.app.goo.gl/Wr1c9mLQ794Kjhoo8" target="_blank" >Blood donation camp, 2020.</a>
    <a href="https://photos.app.goo.gl/f5p7Y1i1xA1nsuzK6" target="_blank" >ENT and general medical camp, 2012.</a>
    <a href="https://photos.app.goo.gl/72kD9eD9PyAVQPta6" target="_blank" >Eye camp, 2012.</a>
    <a href="https://photos.app.goo.gl/6TWXxeM6xeo3dngV8" target="_blank" >Medical Camp, 2011.</a>
@@ -66,6 +67,50 @@
    <a href="https://photos.app.goo.gl/T8zhqdHAaCpR3mm49" target="_blank" >Eye camp, 2006 - Lingagiri.</a>
    <a href="https://photos.app.goo.gl/4ncUT93GrLbzfCnZ7" target="_blank" >Eye camp, 2006.</a>
    <a href="https://photos.app.goo.gl/72kD9eD9PyAVQPta6" target="_blank" >Eye camp, 2012.</a>
+
+   <p>Please find below photos of our Educational activities</p>
+   <a href="https://photos.app.goo.gl/J15pfSGuPeSyYhiW6" target="_blank" >Free book distribution, 2010.</a>
+   <a href="https://photos.app.goo.gl/3kQixUbrhVNLLCVu5" target="_blank" >Vivekavahini youth program, 2008.</a>
+   <a href="https://photos.app.goo.gl/gMLe3Bn4n1smKn2Z8" target="_blank" >Free book distribution, 2007.</a>
+   <a href="https://photos.app.goo.gl/eetiKwxnv7uGNAnx8" target="_blank" >Youth Convention, 2006.</a>
+   <a href="https://photos.app.goo.gl/RvARaL2EvtUs7oBx5" target="_blank" >Free bags distribution, 2006.</a>
+   <a href="https://photos.app.goo.gl/U4UTNp9ALC2iWMVVA" target="_blank" >Guru pooja, 2006.</a>
+   <a href="https://photos.app.goo.gl/4wQvbdqnFVpGkSNC3" target="_blank" >Youth Convention, 2005.</a>
+   <a href="https://photos.app.goo.gl/oeizf7nULEh4LpCK6" target="_blank" >Teachers Convention, 2005.</a>
+
+   <p>Please find below photos of our various Relief Activities</p>
+   <a href="https://photos.app.goo.gl/AMFRMgRrcfc8jLFp6" target="_blank" >Corona relief activity, 2020.</a>
+   <a href="https://photos.app.goo.gl/Ug9bTALcy4tUBLen1" target="_blank" >Krishna flood relief activity, 2009.</a>
+   <a href="https://photos.app.goo.gl/v4viTGvHwGSnqhLTA" target="_blank" >Godavari flood relief activity, 2006.</a>
+   
+
+   <p>Please find below photos of our Cultural activities</p>
+   <a href="https://photos.app.goo.gl/GPR1siqE81QqvFdq7" target="_blank" >Navarathri, 2011.</a>
+   <a href="https://photos.app.goo.gl/NysDLmgNnfkmAKs1A" target="_blank" >108 Days vishnu sahasranama stotra parayanam, 2008</a>
+   <a href="https://photos.app.goo.gl/wjHY694MuawLq64f7" target="_blank" >Hanuman jayanthi, 2008.</a>
+   <a href="https://photos.app.goo.gl/gbqqBdTpDkDXka288" target="_blank" >Nagarara sankeerthana, 2008.</a>
+   <a href="https://photos.app.goo.gl/H9qD2JBiJwfyZ2a28" target="_blank" >Pavalimpuseva, 2008.</a>
+   <a href="https://photos.app.goo.gl/P6MeUaywqSD2ZcTZ8" target="_blank" >Tirumala radhayatra, 2008.</a>
+   <a href="https://photos.app.goo.gl/Kukky1XuniXabzLs6" target="_blank" >Gantasala Patala Astavadhanam, 2007.</a>
+   <a href="https://photos.app.goo.gl/PqirHbKBUdrmCkuw7" target="_blank" >Krishnashtami, 2006.</a>
+   <a href="https://photos.app.goo.gl/GzcLatBxBKMfhuSL2" target="_blank" >Christmas celebrations, 2006.</a>
+
+   <p>Please find below photos of our Rural Development activities</p>
+   <a href="https://photos.app.goo.gl/JAQZgCABrhFHQosi9" target="_blank" >Water camp, 2010.</a>
+   <a href="https://photos.app.goo.gl/64PA87n5mzdz1aKq9" target="_blank" >Tree planting activities, 2006-2008.</a>
+   <a href="https://photos.app.goo.gl/mWnffodhH5WVCzNE8" target="_blank" >Water camp, 2007.</a>
+   <a href="https://photos.app.goo.gl/TrJbgpKfr3thCdad7" target="_blank" >Water camp, 2005.</a>
+
+   <p>Please find below photos of our Other General Samithi activities</p>
+   <a href="https://photos.app.goo.gl/8nPZVKH5u1Ms5gS39" target="_blank" >Building construction, 2020.</a>
+   <a href="https://photos.app.goo.gl/qsiVXRAFQsXPZhYD9" target="_blank" >Samithi anniversary, 2011.</a>
+   <a href="https://photos.app.goo.gl/Akk4oYybHZsTUEpE6" target="_blank" >Samithi building inauguration, 2010.</a>
+   <a href="https://photos.app.goo.gl/MNuBAoYX92PYMFB7A" target="_blank" >Building construction, 2009.</a>
+   <a href="https://photos.app.goo.gl/jy9LToHIuNguS5s32" target="_blank" >Seventeenth Annual Devotees Convention, 2007.</a>
+   <a href="https://photos.app.goo.gl/svWDU96g5zRpYfBX8" target="_blank" >Garikapati Ramakrishna Bodhamrutam, 2007.</a>
+   <a href="https://photos.app.goo.gl/Snojjahi1eGgcobY8" target="_blank" >RK jayanthi celebrations, 2005.</a>
+   <a href="https://photos.app.goo.gl/5RNXhVPZzMQRBJxN6" target="_blank" >Samithi inauguration, 2005.</a>
+   
 </section>
 
 <section  class="footer" id="footer">
