--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
           <li><a href="#gallery" class="menu-item">Media</a>
             <div class="dropdown-content">
               <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
-              <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item">Videos</a>
+              <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item" target="_blank">Videos</a>
             </div>
           </li>
           <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
           <li><a href="volunteer.html" class="menu-item">Get Involved</a></li>
-          <li><a href="sponsor.html" class="menu-item">Our Sponsors</a></li>
           <li><a href="contact.html" class="menu-item">Contact Us</a></li>
         </ul>
       </div>
