--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
           <li><a href="index.html" class="menu-item">Home</a></li>
           <li><a href="about.html" class="menu-item">About Us</a>
               <div class="dropdown-content">
-                <a href="about.html#inspiration" class="dropdown-item">Our inspiration</a>
-                <a href="about.html#history" class="dropdown-item">History of the Seva Samithi</a>
-                <a href="about.html#volunteers" class="dropdown-item">Our volunteers</a>
+                <a href="#" class="dropdown-item">Our inspiration</a>
+                <a href="#" class="dropdown-item">History of the Seva Samithi</a>
+                <a href="#" class="dropdown-item">Our volunteers</a>
               </div>
             </li>
           <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
@@ -40,20 +40,18 @@
               <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
             </div>
           </li>
-          <li><a href="#" class="menu-item">Media</a>
+          <li><a href="#gallery" class="menu-item">Media</a>
             <div class="dropdown-content">
               <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
-              <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item">Videos</a>
+              <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item" target="_blank">Videos</a>
             </div>
           </li>
           <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
           <li><a href="volunteer.html" class="menu-item">Get Involved</a></li>
-          <li><a href="sponsor.html" class="menu-item">Our Sponsors</a></li>
           <li><a href="contact.html" class="menu-item">Contact Us</a></li>
         </ul>
       </div>
     </nav>
-
     <section  class="page-content" id="contactus">
       <h2>Visit Us</h2>
       <div class="location">
