--- a/volunteer.html
+++ b/volunteer.html
@@ -34,26 +34,24 @@
           <li><a href="infrastructure.html" class="menu-item">Campus</a></li>
           <li><a href="activities.html" class="menu-item">Activites</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Medical</a>
-              <a href="#" class="dropdown-item">Educational</a>
-              <a href="#" class="dropdown-item">Relief works</a>
-              <a href="#" class="dropdown-item">Rural Development</a>
+              <a href="activities.html#medical" class="dropdown-item">Medical</a>
+              <a href="activities.html#educational" class="dropdown-item">Educational</a>
+              <a href="activities.html#relief" class="dropdown-item">Relief works</a>
+              <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
             </div>
           </li>
-          <li><a href="#" class="menu-item">Media</a>
+          <li><a href="#gallery" class="menu-item">Media</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Photos</a>
-              <a href="#" class="dropdown-item">Videos</a>
+              <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
+              <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item" target="_blank">Videos</a>
             </div>
           </li>
           <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
           <li><a href="volunteer.html" class="menu-item">Get Involved</a></li>
-          <li><a href="sponsor.html" class="menu-item">Our Sponsors</a></li>
           <li><a href="contact.html" class="menu-item">Contact Us</a></li>
         </ul>
       </div>
     </nav>
-    
     <section id="volunteer" class="page-content">
       <h2> Volunteer </h2>
       <div class="page-text">
