--- a/donationappeal.html
+++ b/donationappeal.html
@@ -19,7 +19,6 @@
         </div>
       </div>
     </section>
-  
     <nav class="navbar">
       <div class="inner_navbar">
         <ul>
@@ -40,15 +39,14 @@
               <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
             </div>
           </li>
-          <li><a href="#" class="menu-item">Media</a>
+          <li><a href="#gallery" class="menu-item">Media</a>
             <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Photos</a>
-              <a href="#" class="dropdown-item">Videos</a>
+              <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
+              <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item" target="_blank">Videos</a>
             </div>
           </li>
           <li><a href="donationappeal.html" class="menu-item">Donate</a></li>
           <li><a href="volunteer.html" class="menu-item">Get Involved</a></li>
-          <li><a href="sponsor.html" class="menu-item">Our Sponsors</a></li>
           <li><a href="contact.html" class="menu-item">Contact Us</a></li>
         </ul>
       </div>
