--- a/volunteer.html
+++ b/volunteer.html
@@ -40,7 +40,7 @@
               <a href="activities.html#rural" class="dropdown-item">Rural Development</a>
             </div>
           </li>
-          <li><a href="#gallery" class="menu-item">Media</a>
+          <li><a href="#" class="menu-item">Media</a>
             <div class="dropdown-content">
               <a href="activities-photos-link.html" class="dropdown-item">Photos</a>
               <a href="https://www.youtube.com/channel/UCGTY3RcDT4eKHOB586YcXvw?view_as=subscriber" class="dropdown-item" target="_blank">Videos</a>
